# autoware

docs/architecture/: ComponentDiagram.pu  TopLevelComponents.pu
ros/src/.config/rviz/: open_planner.rviz
ros/src/common/libs/amathutils_lib/src/: Amathutils.cpp
ros/src/common/libs/state_machine_lib/src/: state_context.cpp
ros/src/common/libvectormap/include/libvectormap/: Math.h  vector_map.h
ros/src/common/libvectormap/src/: vector_map.cpp
ros/src/computing/perception/detection/trafficlight_recognizer/: CMakeLists.txt  package.xml
ros/src/computing/perception/localization/lib/gnss/: CMakeLists.txt
ros/src/computing/perception/localization/lib/gnss/include/gnss/: geo_pos_conv.hpp
ros/src/computing/perception/localization/lib/gnss/src/: geo_pos_conv.cpp
ros/src/computing/perception/localization/lib/gnss/test/: test_gnss_lib.test
ros/src/computing/perception/localization/lib/gnss/test/src/: test_gnss.cpp
ros/src/msgs/autoware_config_msgs/: CMakeLists.txt
ros/src/msgs/autoware_config_msgs/msg/: ConfigCompareMapFilter.msg  ConfigNDT.msg  ConfigStopArea.msg
ros/src/msgs/autoware_msgs/: CMakeLists.txt
ros/src/msgs/autoware_msgs/msg/: RemoteCmd.msg  SignalLightRoi.msg  SignalRoi.msg  TrafficLight.msg
ros/src/simulation/carla/carla_autoware_bridge/: CMakeLists.txt  README.md
ros/src/simulation/carla/carla_autoware_bridge/docker/: Dockerfile  LICENCE  run.sh
ros/src/simulation/carla_simulator/carla_autoware_bridge/: CMakeLists.txt  README.md  package.xml
ros/src/simulation/carla_simulator/carla_autoware_bridge/docker/: Dockerfile  build.sh  run.sh
ros/src/simulation/carla_simulator/carla_autoware_bridge/launch/: launch_carla.launch
ros/src/simulation/carla_simulator/carla_autoware_bridge/scripts/: launch_bridge.sh  launch_carla.sh
ros/src/simulation/lgsvl_simulator/lgsvl_simulator_tools/: CMakeLists.txt  package.xml
ros/src/simulation/lgsvl_simulator/lgsvl_simulator_tools/launch/: lgsvl_darknet_labeler.launch
ros/src/simulation/lgsvl_simulator/lgsvl_simulator_tools/scripts/: labeled_image.py  lgsvl_darknet_labeler.py
ros/src/simulation/lgsvl_simulator/lgsvl_simulator_tools/template/: train_yolo.sh
ros/src/simulation/lgsvl_simulator/lgsvl_simulator_tools/template/cfg/: lgsvl.data  lgsvl.names
ros/src/simulation/lgsvl_simulator_bridge/: CMakeLists.txt  package.xml
ros/src/simulation/lgsvl_simulator_bridge/launch/: lgsvl_simulator.launch
ros/src/simulation/lgsvl_simulator_bridge/rviz/: lgsvl_simulator.rviz
ros/src/system/autoware_health_checker/config/: default.yaml
ros/src/system/autoware_health_checker/include/autoware_health_checker/: node_status_publisher.h
ros/src/system/autoware_health_checker/src/: health_aggregator.cpp  node_status_publisher.cpp
ros/src/system/autoware_health_checker/src/health_aggregator/: health_aggregator.cpp
ros/src/system/gazebo/catvehicle/src/: distanceEstimator.cpp
ros/src/system/gazebo/laser_scan_converter/src/: converter.cpp
ros/src/system/gazebo/point_cloud_converter/src/: converter.cpp
ros/src/system/gazebo/twist_cmd_converter/src/: converter.cpp
ros/src/system/sync/: sync_drivers.cpp  test.cpp  time_monitor.cpp
ros/src/system/sync/include/: single_sync.hpp  t_sync_message.h
ros/src/vehicle/vehicle_description/urdf/: xe.urdf
(+210 files in other folders)
